# HomeAssistant

./: .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  hacs.json  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.devcontainer/: README.md  devcontainer.json
.github/workflows/: pylint.yml
custom_components/compit/: __init__.py  api.py  climate.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  number.py  select.py  sensor.py  sensor_matcher.py  switch.py
custom_components/compit/definitions/: devices_en.json  devices_pl.json
custom_components/compit/translations/: en.json  pl.json
custom_components/compit/types/: DeviceDefinitions.py  DeviceState.py  SystemInfo.py
scripts/: develop  lint  setup
